fix(page-tabs): ensure scrollbar is dark

--- a/packages/gatsby-theme-carbon/src/components/PageTabs/PageTabs.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/PageTabs/PageTabs.module.scss
@@ -15,6 +15,7 @@
   padding: 0;
   overflow-x: auto;
   scrollbar-width: none;
+  color-scheme: dark;
 }
 
 .list-item {
